# cache-simulation

./: .gitignore  Makefile  README.md  Readme.md  assigned-timeslot.txt  build.sh  debug.csv  input.csv  mock_data.csv  requests.csv
app/: CMakeLists.txt  Readme-app.md  Readme.md  main.cpp
app/include/: application.hpp  legacy.h
app/src/: application.cpp  legacy.c
include/: cache.hpp  cache_layer.hpp  csv_parser.h  default.h  helper_functions.h  main_memory.hpp  multiplexer.hpp  numeric_parser.h  simulation.h  simulation.hpp  structs.h
include/parsers/: csv_parser.h  numeric_parser.h
include/structs/: debug.h  default.h  request.h  result.h  test.h
src/: csv_parser.c  main.c  numeric_parser.c  simulation.c  simulation.cpp
src/parsers/: csv_parser.c  numeric_parser.c
test/: cache_layer_unit_tests.cpp  cache_tests.py  generate_memory_requests.py  memory_requests.csv  testMainCache.cpp  test_cache.cpp
test/inputs/: expected_values.csv  invalid_data1.csv  invalid_data10.csv  invalid_data11.csv  invalid_data12.csv  invalid_data15.csv  invalid_data16.csv  invalid_data17.csv  invalid_data2.csv  invalid_data3.csv  invalid_data4.csv  invalid_data5.csv  invalid_data6.csv  invalid_data7.csv  invalid_data8.csv  invalid_data9.csv  valid_data.csv
util/: helper_functions.c  helper_functions.h  trace_file.cpp
